<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
         />

    <LinearLayout
        android:id="@+id/wrapperdetail_toolbar_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab2"
        android:gravity="center" >
        
        <LinearLayout
            android:id="@+id/wrapperDetail_linearLayout_lockscreen_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margintop_11"
                android:src="@drawable/details_lock_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_space_5"
                android:layout_marginTop="@dimen/margin_space_3"
                android:text="@string/back"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapperDetail_linearLayout_vgood_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/wrapperdetail_votegood_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_space_10"
                android:src="@drawable/tab_ic_col_def" />

            <TextView
                android:id="@+id/wrapperdetail_votegood_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_space_5"
                android:layout_marginTop="@dimen/margin_space_3"
                android:text="@string/vgood"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapperDetail_linearLayout_downLoad_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/xiazai_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_space_10"
                android:src="@drawable/details_download_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_space_5"
                android:layout_marginTop="@dimen/margin_space_3"
                android:text="@string/download"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapperDetail_linearLayout_Table_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_space_15"
                android:src="@drawable/details_table_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_space_4"
                android:layout_marginTop="@dimen/margin_space_6"
                android:text="@string/desktop"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapperDetail_linearLayout_share_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_space_10"
                android:src="@drawable/details_share_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_space_5"
                android:layout_marginTop="@dimen/margin_space_3"
                android:text="@string/share"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>